Drop data in ping response
