# api-spec/openapi/swagger/ark/v1/service.swagger.json
@@ -732,24 +732,7 @@
       }
     },
     "v1PingResponse": {
-      "type": "object",
-      "properties": {
-        "roundFinalization": {
-          "$ref": "#/definitions/v1RoundFinalizationEvent"
-        },
-        "roundFinalized": {
-          "$ref": "#/definitions/v1RoundFinalizedEvent"
-        },
-        "roundFailed": {
-          "$ref": "#/definitions/v1RoundFailed"
-        },
-        "roundSigning": {
-          "$ref": "#/definitions/v1RoundSigningEvent"
-        },
-        "roundSigningNoncesGenerated": {
-          "$ref": "#/definitions/v1RoundSigningNoncesGeneratedEvent"
-        }
-      }
+      "type": "object"
     },
     "v1RedeemTransaction": {
       "type": "object",
